Screen is updating

--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
           <div class="screen">Screen</div>
         </div>
         <div class="buttons-container">
-          <div class="button" id="7">7</div>
-          <div class="button" id="8">8</div>
-          <div class="button" id="9">9</div>
+          <div class="button" data-value="7">7</div>
+          <div class="button" data-value="8">8</div>
+          <div class="button" data-value="9">9</div>
           <div class="operators">
-            <div class="button operator" id="plus">+</div>
-            <div class="button operator" id="minus">-</div>
+            <div class="button operator" data-value=" + ">+</div>
+            <div class="button operator" data-value=" - ">-</div>
           </div>
-          <div class="button" id="4">4</div>
-          <div class="button" id="5">5</div>
-          <div class="button" id="6">6</div>
+          <div class="button" data-value="4">4</div>
+          <div class="button" data-value="5">5</div>
+          <div class="button" data-value="6">6</div>
           <div class="operators">
-            <div class="button operator" id="times">x</div>
-            <div class="button operator" id="divide">/</div>
+            <div class="button operator" data-value=" x ">x</div>
+            <div class="button operator" data-value=" / ">/</div>
           </div>
-          <div class="button" id="1">1</div>
-          <div class="button" id="2">2</div>
-          <div class="button" id="3">3</div>
-          <div class="button" id="clear">Clear</div>
-          <div class="button" id="decimal">.</div>
-          <div class="button" id="0">0</div>
+          <div class="button" data-value="1">1</div>
+          <div class="button" data-value="2">2</div>
+          <div class="button" data-value="3">3</div>
+          <div class="button" data-value="clr">Clear</div>
+          <div class="button" data-value=".">.</div>
+          <div class="button" data-value="0">0</div>
           <div class="button blank"></div>
-          <div class="button operator" id="equals">=</div>
+          <div class="button operator" data-value="=">=</div>
         </div>
       </div>
     </div>
