--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
           <div class="screen">Screen</div>
         </div>
         <div class="buttons-container">
-          <div class="button" data-value="7">7</div>
-          <div class="button" data-value="8">8</div>
-          <div class="button" data-value="9">9</div>
+          <div class="button digit" data-digit="7">7</div>
+          <div class="button digit" data-digit="8">8</div>
+          <div class="button digit" data-digit="9">9</div>
           <div class="operators">
-            <div class="button operator" data-value=" + ">+</div>
-            <div class="button operator" data-value=" - ">-</div>
+            <div class="button operator" data-digit="+">+</div>
+            <div class="button operator" data-digit="-">-</div>
           </div>
-          <div class="button" data-value="4">4</div>
-          <div class="button" data-value="5">5</div>
-          <div class="button" data-value="6">6</div>
+          <div class="button digit" data-digit="4">4</div>
+          <div class="button digit" data-digit="5">5</div>
+          <div class="button digit" data-digit="6">6</div>
           <div class="operators">
-            <div class="button operator" data-value=" x ">x</div>
-            <div class="button operator" data-value=" / ">/</div>
+            <div class="button operator" data-digit="x">x</div>
+            <div class="button operator" data-digit="/">/</div>
           </div>
-          <div class="button" data-value="1">1</div>
-          <div class="button" data-value="2">2</div>
-          <div class="button" data-value="3">3</div>
-          <div class="button" data-value="clr">Clear</div>
-          <div class="button" data-value=".">.</div>
-          <div class="button" data-value="0">0</div>
+          <div class="button digit" data-digit="1">1</div>
+          <div class="button digit" data-digit="2">2</div>
+          <div class="button digit" data-digit="3">3</div>
+          <div class="button clear" data-digit="clr">Clear</div>
+          <div class="button digit" data-digit=".">.</div>
+          <div class="button digit" data-digit="0">0</div>
           <div class="button blank"></div>
-          <div class="button operator" data-value="=">=</div>
+          <div class="button equals" data-digit="=">=</div>
         </div>
       </div>
     </div>
