--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="calculator-container">
       <div class="calculator">
         <div class="screen-container">
-          <div class="screen">Screen</div>
+          <div class="screen"></div>
         </div>
         <div class="buttons-container">
           <div class="button digit" data-digit="7">7</div>
